# pdf-layout-extraction-dev

./: .gitignore  README.md  README_PIPELINE.md  georeference_cell.py  pdf_troubleshoot_tool.py  pipeline_config.json  pipeline_config_single_page.json  pyproject.toml  run_pipeline.py  sample_batch_config.json  setup.py  streamlit_app.py  test_integration.py  transform_debug_helper.py
.tmp_dagster_home_d1wpkq3s/history/: runs.db
.tmp_dagster_home_d1wpkq3s/history/runs/: 05f367ed-0875-4a59-bfc3-664de56a538b.db  27f17a85-50a1-4283-956b-cb04a47f9830.db  2a9884ae-f04d-43c1-bee6-9a5b8cf4b252.db  index.db
.tmp_dagster_home_d1wpkq3s/schedules/: schedules.db
.tmp_dagster_home_d1wpkq3s/storage/: aligned_rack_elements  coordinate_transformer  inverter_layout  pipeline_summary  site_layout
examples/: simple_usage.py
output/: pipeline_summary.json
testing_notebooks/: dagster_pdf_pipeline.py  dagster_pdf_pipeline_enhanced.py  polygon-extraction.ipynb
testing_notebooks/text-extraction-tests/LLM-extract/: LLM-extraction.ipynb  alight_rackingv2_1.py  align_racking.py  align_racking_v2.py  align_racking_v3.py  combiner_poly_site_polygons_rack_outlines.pkl  full_pipeline.ipynb  layout_extended_13_14_running_record_20250806_205637.pkl  layout_extended_14_15_running_record.pkl  layout_extended_14_15_running_record_20250806_211011.pkl  northstar_layers.qgz  transform_path_dev.ipynb
testing_notebooks/text-extraction-tests/docTR/: doctTR.ipynb  (+1 more)
utilities/: coordinate_transformation.py  extract_pdf_as_built.py  pdf_extraction_utils.py
utilities/archive/: extract_polygons.py
(+4 files in other folders)
