[project]
name = "pdf-layout-extraction-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [   "langgraph",
    "pydantic-ai[logfire]",
    "google-generativeai",
    "pymupdf",
    "fitz",
    "google-genai",
    "ipython",
    "ipykernel",
    "openai",
     "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "dash-cytoscape>=0.3.0",
    "deprecated",
    "streamlit",
    "streamlit-pdf-viewer",
    "streamlit-cytoscapejs",
    "st-cytoscape",
    "langgraph-cli[inmem]",
    "unstructured[all-docs]",
    "llama_index",
    "asttokens",
    "pdfplumber",
    "shapely",
    "pdfminer.six",
    "nbformat>=4.2.0",
    "geojson>=3.0.0",
    "paddleocr",
    "python-doctr[torch]",
    "ultralytics",
    "opencv-python>=4.8",]


